--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,33 @@ h3{
 }
 
 
+/* about section start */
+#about{
+    padding-left: 300px;
+    padding-top: 70px;
+}
+
+
+.container{
+    margin: 40px 0px;
+    display: flex;
+    justify-content: left;
+    
+}
+
+.about{
+    color: #ff5500;
+}
+
+.about-image{
+    margin-left: 300px;
+    border: 10px double #ff5500;
+    border-radius: 50%;
+}
+
+.about-image img{
+    border-radius: 50%;
+}
 
 /* Footer Styling Starts here */
 #footer{
