--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ ul li a:hover{
 
 /* Hero Section Start */
 #hero{
-    background-color: #252424;
+    background-color: #090909;
 
 }
 
@@ -195,6 +195,8 @@ ul li a:hover{
 .hero-image{
     position: relative;
     border: 10px double #11d0f2;
+    /* background: linear-gradient(yellow pink orange blue purple);
+    padding: 10px; */
     border-radius: 50%;
     margin-left: 200px;
     margin-top: 50px;
@@ -311,7 +313,7 @@ h3{
 }
 /* Skills Styling Ends here */
 
-#contact{
+/* #contact{
     width: 600px;
     margin-top: 30px;
     margin-left: 43%;
@@ -330,7 +332,7 @@ h3{
 .username{
     width: 500px;
     height: 30px;
-}
+} */
 
 
 
@@ -426,12 +428,13 @@ h3{
 }
 
 .about{
-    color: #ff5500;
+    color: #0b5e10;
 }
 
 .about-image{
     margin-left: 300px;
-    border: 10px double #ff5500;
+    background: linear-gradient(orange, green,red,skyblue purple);
+    padding: 5px;
     border-radius: 50%;
 }
 
